@@ -77,6 +77,7 @@ CAY-2595 ObjAttributes are not sorted in alphabetical ordering on save
 CAY-2596 DbImport xml config changes after dbImport plugin task execution
 CAY-2601 Modeler DbImport: result dialog issues
 CAY-2603 NPE reloading project in the model
+CAY-2605 Modeler: Unable to save - java.nio.file.InvalidPathException
 
 ----------------------------------
 Release: 4.1.B1
